<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/familyDashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/familyLocationFragment"
        android:icon="@drawable/ic_map_pin"
        android:title="@string/nav_location" />
    <item
        android:id="@+id/familyReportsFragment"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/familyAlertsFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/familySettingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
